<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:visibility="gone">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/conainer_tasks"
                    android:layout_alignParentTop="true"
                    android:textSize="30sp"
                    android:text="List conainers"
                    android:textColor="@color/list_text"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/conainer_tasks_desk"
                    android:layout_below="@+id/conainer_tasks"
                    android:text="List containers running on docker host" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardUseCompatPadding="true"
            card_view:cardElevation="4dp"
            card_view:cardCornerRadius="3dp"
            style="@style/CardView.Light"
            android:accessibilityLiveRegion="assertive"
            android:elevation="6dp"
            android:layoutMode="clipBounds"
            android:translationZ="4dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                style="@style/CardView.Light">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/image_tasks"
                    android:layout_alignParentTop="true"
                    android:textSize="30sp"
                    android:text="@string/images_tasks"
                    android:textColor="@color/list_text"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/image_tasks_desk"
                    android:layout_below="@+id/image_tasks"
                    android:text="@string/image_task_desk" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:id="@+id/ivProfile"
            android:layout_height="wrap_content"
            android:clickable="true"
            card_view:cardUseCompatPadding="true"
            card_view:cardElevation="4dp"
            card_view:cardCornerRadius="3dp"
            android:transitionName="infoexpand"
            android:scaleType="centerCrop">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                style="@style/CardView.Light"
                android:clickable="true"
                android:onClick="getDockerInfo"
                android:outlineProvider="bounds"
                android:id="@+id/host_info_btn"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/info_tasks"
                    android:layout_alignParentTop="true"
                    android:textSize="30sp"
                    android:text="@string/host_task"
                    android:textColor="@color/list_text"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/info_tasks_desk"
                    android:layout_below="@+id/info_tasks"
                    android:text="@string/host_task_desk" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</LinearLayout>